crates/vihaco/tests/ui/rfc0007-machine-duplicate-device-code.stderr
error: duplicate device code 0x01 for fields `a` and `b`
  --> tests/ui/rfc0007-machine-duplicate-device-code.rs:26:5
   |
26 |     b: DemoDevice,
   |     ^
